# project_template

./: README.md  install.py
PROJECT/: .gitignore  CMakeLists.txt  README.md  build.py  conanfile.py  conanfile.txt  pyproject.toml  tasks.py
PROJECT/docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  reference.rst
PROJECT/docs/PROJECT/: index.rst
PROJECT/docs/_source/: PROJECT.rst  modules.rst  pyPROJECT.rst
PROJECT/include/PROJECT/: config.h.in  version.h.in
PROJECT/src/PROJECT/: __init__.py  cxx.py  lib.cpp
PROJECT/src/cxx/: lib.cpp
PROJECT/src/cxx/app/: main.cpp
PROJECT/src/cxxPROJECT/: binding.cpp
PROJECT/src/pyPROJECT/: __init__.py  cxx.py
PROJECT/src/pycxxPROJECT/: binding.cpp
PROJECT/tests/PROJECT/: conftest.py  test_PROJECT.cpp  test_PROJECT.py
PROJECT/tests/benchmarks/: benchmark_PROJECT.cpp
PROJECT/tests/pyPROJECT/: test_pyPROJECT.py
