[tool.poetry]
name = "pyPROJECT"
version = "0.1.0"
description = "DESCRIPTION"
authors = ["AUTHOR <EMAIL>"]
readme = "README.rst"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
]
packages = [
  { include = "PROJECT", from = "src" },
]
include = [
  { path = "src/cxx/*.cpp", format = "sdist" },
  { path = "src/cxxPROJECT/*.cpp", format = "sdist" },
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
cmake = "^4.1.0"
sphinx = "^8.2.3"
sphinx-rtd-theme = "^3.0.2"
conan = "^2.20.1"
breathe = "^4.36.0"
gitpython = "^3.1.45"
isort = "^6.0.1"
black = "^25.9.0"
ipython = "^9.5.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.3.0"
gcovr = "^8.3"
pytest-cov = "^7.0.0"
clang-format = "^21.1.2"
tomli = "^2.2.1"
setuptools = "^80.9.0"

[tool.poetry.extras]
docs = ["Sphinx"]

[tool.black]
extend_exclude = ''

[tool.isort]
profile = "black"
known_first_party = ["PROJECT"]
skip = ["__init__.py"]
extend_skip_glob = ["venv", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """\
    --cov-report=term-missing:skip-covered \
    --cov-report=html \
    --cov-report=xml \
    """
filterwarnings = "ignore::DeprecationWarning"
asyncio_mode = "auto"

[tool.coverage]
run = { source = ["PROJECT"], branch = true, omit = [] }
html = { directory = "build/pytest_coverage" }
xml = { output = "build/pytest_coverage.xml" }


[tool.poetry.build]
script = "build.py"
generate-setup-file = true


[build-system]
requires = ["poetry-core", "setuptools", "wheel", "cmake", "tomli", "gitpython", "conan", "pybind11"]
build-backend = "poetry.core.masonry.api"

